--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:31:53 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:32:36 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,11 +147,11 @@ body {
       <td>Cameron Smith(W) -6
 -4 thru 13</td>
       <td>Shane Lowry -4
--1 thru 11</td>
+-1 thru 12</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
-+6 thru 17</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -161,7 +161,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -11
 -3 thru 10</td>
       <td>Shane Lowry -4
--1 thru 11</td>
+-1 thru 12</td>
       <td>Corey Conners -2
 -1 thru 13</td>
       <td>Justin Thomas(W) -1
@@ -257,15 +257,15 @@ Missed Cut</td>
       <td>Scottie Scheffler -11
 -3 thru 10</td>
       <td>Shane Lowry -4
--1 thru 11</td>
+-1 thru 12</td>
       <td>Justin Thomas(W) -1
 E thru 16</td>
       <td>Will Zalatoris +2
 +3 thru 14</td>
       <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
-+6 thru 17</td>
+      <td class="greyout">Patrick Cantlay +8
++7 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -273,13 +273,13 @@ E thru 16</td>
       <td>Cameron Smith -6
 -4 thru 13</td>
       <td>Shane Lowry -4
--1 thru 11</td>
+-1 thru 12</td>
       <td>Corey Conners -2
 -1 thru 13</td>
       <td>Dustin Johnson(W) -1
 +1 thru 13</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
-+6 thru 17</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -289,7 +289,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -6
 -4 thru 13</td>
       <td>Shane Lowry -4
--1 thru 11</td>
+-1 thru 12</td>
       <td>Corey Conners -2
 -1 thru 13</td>
       <td>Hideki Matsuyama +1
@@ -321,7 +321,7 @@ Missed Cut</td>
       <td>Cameron Smith -6
 -4 thru 13</td>
       <td>Shane Lowry -4
--1 thru 11</td>
+-1 thru 12</td>
       <td>Justin Thomas(W) -1
 E thru 16</td>
       <td>Will Zalatoris +2
@@ -342,8 +342,8 @@ E thru 16</td>
 -1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
-+6 thru 17</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -358,10 +358,10 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Robert MacIntyre +6
 +4 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout">Jon Rahm +7
+      <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
+      <td class="greyout">Patrick Cantlay +8
++7 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -385,30 +385,14 @@ Missed Cut</td>
       <td>Cameron Smith -6
 -4 thru 13</td>
       <td>Shane Lowry -4
--1 thru 11</td>
+-1 thru 12</td>
       <td>Justin Thomas(W) -1
 E thru 16</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
-+6 thru 17</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -11
--3 thru 10</td>
-      <td>Cameron Smith(W) -6
--4 thru 13</td>
-      <td>Matthew Fitzpatrick +3
-+3 thru 17</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -441,6 +425,22 @@ E thru 16</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -11
+-3 thru 10</td>
+      <td>Cameron Smith(W) -6
+-4 thru 13</td>
+      <td>Matthew Fitzpatrick +3
++3 thru 17</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -488,8 +488,8 @@ Missed Cut</td>
 -1 (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +7
 +5 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
-+6 thru 17</td>
+      <td class="greyout">Patrick Cantlay +8
++7 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -500,34 +500,18 @@ Missed Cut</td>
 -1 thru 13</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay(W) +7
-+6 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +7
+      <td>Jon Rahm +7
 +5 (F)</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -11
--3 thru 10</td>
-      <td>Cameron Smith -6
--4 thru 13</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td>Billy Horschel +10
+      <td class="greyout leftborder">Patrick Cantlay(W) +8
 +7 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry(W) -4
--1 thru 11</td>
+-1 thru 12</td>
       <td>Corey Conners -2
 -1 thru 13</td>
       <td>Joaquin Niemann +1
@@ -537,6 +521,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler(W) -11
+-3 thru 10</td>
+      <td>Cameron Smith -6
+-4 thru 13</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td>Billy Horschel +10
++7 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -588,22 +588,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith -6
--4 thru 13</td>
-      <td>Justin Thomas(W) -1
-E thru 16</td>
-      <td>Will Zalatoris +2
-+3 thru 14</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas -1
@@ -623,7 +607,7 @@ E thru 16</td>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">2</td>
       <td>Shane Lowry -4
--1 thru 11</td>
+-1 thru 12</td>
       <td>Dustin Johnson(W) -1
 +1 thru 13</td>
       <td>Matthew Fitzpatrick +3
@@ -665,6 +649,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">3</td>
+      <td>Cameron Smith -6
+-4 thru 13</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
+      <td>Will Zalatoris +2
++3 thru 14</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -716,22 +716,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">9</td>
-      <td>Scottie Scheffler -11
--3 thru 10</td>
-      <td>Dustin Johnson -1
-+1 thru 13</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td>Adam Scott +12
-+8 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">10</td>
       <td>Dustin Johnson -1
@@ -740,11 +724,27 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +7
+      <td>Jon Rahm +7
 +5 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">10</td>
+      <td>Scottie Scheffler -11
+-3 thru 10</td>
+      <td>Dustin Johnson -1
++1 thru 13</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td>Adam Scott +12
++8 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -804,10 +804,10 @@ Missed Cut</td>
 +3 thru 14</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +7
+      <td>Jon Rahm +7
 +5 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -829,15 +829,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Justin Thomas -1
 E thru 16</td>
       <td>Hideki Matsuyama +1
 +4 thru 12</td>
       <td>Jon Rahm(W) +7
 +5 (F)</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -845,15 +845,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Justin Thomas -1
 E thru 16</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td>Patrick Cantlay(W) +7
-+6 thru 17</td>
       <td>Jon Rahm +7
 +5 (F)</td>
+      <td>Patrick Cantlay(W) +8
++7 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -861,15 +861,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">16</td>
       <td>Collin Morikawa(W) E
 +1 thru 14</td>
       <td>Hideki Matsuyama +1
 +4 thru 12</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
       <td>Jon Rahm +7
 +5 (F)</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -884,24 +884,24 @@ E thru 16</td>
 -1 (F)</td>
       <td>Daniel Berger +7
 +5 (F)</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout leftborder">Jon Rahm +7
+      <td>Jon Rahm +7
 +5 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">19</td>
       <td>Dustin Johnson -1
 +1 thru 13</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
       <td>Jon Rahm +7
 +5 (F)</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">19</td>
       <td>Collin Morikawa E
 +1 thru 14</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td>Jon Rahm(W) +7
 +5 (F)</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -1057,8 +1057,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Neville Spillman</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Patrick Cantlay</td>
       <td class="greyout">Jon Rahm</td>
+      <td class="greyout">Patrick Cantlay</td>
       <td class="greyout">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout leftborder">Sam Burns
