--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:51:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:51:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,11 +141,11 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
 -2 thru 12</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
+      <td>Shane Lowry -3
+E thru 13</td>
       <td>Justin Thomas(W) -2
 -1 thru 17</td>
       <td>Will Zalatoris +1
@@ -157,11 +157,11 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Cameron Smith -6
 -4 thru 14</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
+      <td>Shane Lowry -3
+E thru 13</td>
       <td>Justin Thomas(W) -2
 -1 thru 17</td>
       <td>Will Zalatoris +1
@@ -169,22 +169,6 @@ body {
       <td class="greyout leftborder">Matthew Fitzpatrick +4
 +4 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 12</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
-      <td>Will Zalatoris +1
-+2 thru 16</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -199,6 +183,22 @@ Missed Cut</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 12</td>
+      <td>Shane Lowry -3
+E thru 13</td>
+      <td>Will Zalatoris +1
++2 thru 16</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -221,11 +221,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
+      <td class="bigbold">-1</td>
       <td>Corey Conners -3
 -2 thru 14</td>
+      <td>Shane Lowry -3
+E thru 13</td>
       <td>Justin Thomas(W) -2
 -1 thru 17</td>
       <td>Jon Rahm +7
