--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:51:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:51:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,22 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-19</td>
-      <td>Scottie Scheffler -10
--2 thru 12</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
-      <td>Corey Conners -3
--2 thru 14</td>
-      <td>Justin Thomas(W) -2
--1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-18</td>
@@ -172,19 +156,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-18</td>
       <td>Scottie Scheffler -10
 -2 thru 12</td>
-      <td>Cameron Smith(W) -6
--4 thru 14</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td>Corey Conners -3
+-2 thru 14</td>
+      <td>Shane Lowry -3
+E thru 13</td>
+      <td>Justin Thomas(W) -2
+-1 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -220,6 +204,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler -10
+-2 thru 12</td>
+      <td>Cameron Smith(W) -6
+-4 thru 14</td>
+      <td>Shane Lowry -3
+E thru 13</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-16</td>
       <td>Scottie Scheffler -10
@@ -234,22 +234,6 @@ Missed Cut</td>
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-15</td>
-      <td>Scottie Scheffler -10
--2 thru 12</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
-      <td>Justin Thomas(W) -2
--1 thru 17</td>
-      <td>Will Zalatoris +1
-+2 thru 16</td>
-      <td class="greyout leftborder">Tony Finau +4
-+2 (F)</td>
-      <td class="greyout">Patrick Cantlay +8
-+7 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -268,52 +252,36 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -10
+-2 thru 12</td>
+      <td>Shane Lowry -3
+E thru 13</td>
+      <td>Justin Thomas(W) -2
+-1 thru 17</td>
+      <td>Will Zalatoris +1
++2 thru 16</td>
+      <td class="greyout leftborder">Tony Finau +4
++2 (F)</td>
+      <td class="greyout">Patrick Cantlay +8
++7 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-13</td>
       <td>Cameron Smith -6
 -4 thru 14</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
       <td>Corey Conners -3
 -2 thru 14</td>
+      <td>Shane Lowry -3
+E thru 13</td>
       <td>Dustin Johnson(W) -1
 +1 thru 14</td>
       <td class="greyout leftborder">Patrick Cantlay +8
 +7 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -6
--4 thru 14</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
-      <td>Justin Thomas(W) -2
--1 thru 17</td>
-      <td>Will Zalatoris +1
-+2 thru 16</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith(W) -6
--4 thru 14</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
-      <td>Corey Conners -3
--2 thru 14</td>
-      <td>Hideki Matsuyama +2
-+5 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Jon Rahm +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -332,6 +300,38 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -6
+-4 thru 14</td>
+      <td>Shane Lowry -3
+E thru 13</td>
+      <td>Justin Thomas(W) -2
+-1 thru 17</td>
+      <td>Will Zalatoris +1
++2 thru 16</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith(W) -6
+-4 thru 14</td>
+      <td>Corey Conners -3
+-2 thru 14</td>
+      <td>Shane Lowry -3
+E thru 13</td>
+      <td>Hideki Matsuyama +2
++5 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Jon Rahm +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith(W) -6
@@ -345,22 +345,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Marc Leishman +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -6
--4 thru 14</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
-      <td>Justin Thomas(W) -2
--1 thru 17</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -410,6 +394,22 @@ Missed Cut</td>
 +5 (F)</td>
       <td class="greyout">Patrick Cantlay +8
 +7 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -6
+-4 thru 14</td>
+      <td>Shane Lowry -3
+E thru 13</td>
+      <td>Justin Thomas(W) -2
+-1 thru 17</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -525,9 +525,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-3</td>
-      <td>Shane Lowry(W) -4
--1 thru 12</td>
+      <td class="bigbold">-2</td>
+      <td>Shane Lowry(W) -3
+E thru 13</td>
       <td>Corey Conners -3
 -2 thru 14</td>
       <td>Joaquin Niemann +1
@@ -669,9 +669,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">3</td>
-      <td>Shane Lowry -4
--1 thru 12</td>
+      <td class="bigbold">4</td>
+      <td>Shane Lowry -3
+E thru 13</td>
       <td>Dustin Johnson(W) -1
 +1 thru 14</td>
       <td>Tony Finau +4
