--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:51:57 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:52:40 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith(W) -6
--4 thru 14</td>
-      <td>Corey Conners -3
--2 thru 14</td>
-      <td>Justin Thomas -2
--1 thru 17</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler(W) -10
@@ -204,6 +188,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -6
+-4 thru 14</td>
+      <td>Corey Conners -2
+-1 thru 15</td>
+      <td>Justin Thomas -2
+-1 thru 17</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -6
@@ -212,28 +212,12 @@ Missed Cut</td>
 -1 thru 17</td>
       <td>Tommy Fleetwood(W) +1
 -2 (F)</td>
-      <td>Joaquin Niemann +1
-+2 thru 16</td>
-      <td class="greyout leftborder">Rory McIlroy +1
+      <td>Rory McIlroy +1
 -1 (F)</td>
+      <td class="greyout leftborder">Joaquin Niemann +2
++3 thru 17</td>
       <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -3
--2 thru 14</td>
-      <td>Shane Lowry -3
-E thru 13</td>
-      <td>Justin Thomas(W) -2
--1 thru 17</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout">Tyrrell Hatton +9
-+7 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -252,20 +236,20 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">3</td>
-      <td>Corey Conners -3
--2 thru 14</td>
-      <td>Justin Thomas -2
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">0</td>
+      <td>Shane Lowry -3
+E thru 13</td>
+      <td>Justin Thomas(W) -2
 -1 thru 17</td>
-      <td>Dustin Johnson -1
-+1 thru 14</td>
-      <td>Russell Henley +7
-+4 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
+      <td>Corey Conners -2
+-1 thru 15</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout">Tyrrell Hatton +9
++7 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -300,10 +284,26 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas -2
+-1 thru 17</td>
+      <td>Corey Conners -2
+-1 thru 15</td>
+      <td>Dustin Johnson -1
++1 thru 14</td>
+      <td>Russell Henley +7
++4 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">10</td>
-      <td>Corey Conners(W) -3
--2 thru 14</td>
+      <td class="bigbold">11</td>
+      <td>Corey Conners(W) -2
+-1 thru 15</td>
       <td>Collin Morikawa E
 +1 thru 16</td>
       <td>Robert MacIntyre +6
@@ -379,8 +379,8 @@ Missed Cut</td>
     <tr>
       <td class="bigbold greyout">Adam Ryan</td>
       <td class="bigbold greyout">-</td>
-      <td class="greyout">Corey Conners</td>
       <td class="greyout">Justin Thomas(W)</td>
+      <td class="greyout">Corey Conners</td>
       <td class="greyout">Jon Rahm</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
