--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:17:02 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:17:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -572,38 +572,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">1</td>
-      <td>Justin Thomas -1
-E (F)</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Will Zalatoris +1
-+2 thru 17</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Tiger Woods(W) +7
-+6 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -2
--1 thru 17</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Will Zalatoris +1
-+2 thru 17</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">2</td>
       <td>Cameron Smith -6
@@ -618,6 +586,22 @@ E (F)</td>
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -1
+E (F)</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
+      <td>Will Zalatoris +1
++2 thru 17</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Tiger Woods(W) +7
++6 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -636,12 +620,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">3</td>
+      <td>Corey Conners -2
+-1 thru 17</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
+      <td>Will Zalatoris +1
++2 thru 17</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">4</td>
       <td>Justin Thomas -1
 E (F)</td>
-      <td>Collin Morikawa(W) E
-+1 thru 17</td>
+      <td>Collin Morikawa(W) +1
++2 (F)</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Viktor Hovland +3
@@ -781,9 +781,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">11</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
+      <td class="bigbold">12</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
       <td>Will Zalatoris +1
 +2 thru 17</td>
       <td>Viktor Hovland(W) +3
@@ -797,11 +797,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Corey Conners(W) -2
 -1 thru 17</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
       <td>Robert MacIntyre +6
 +4 (F)</td>
       <td>Daniel Berger +7
@@ -813,9 +813,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
@@ -860,22 +860,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">16</td>
-      <td>Collin Morikawa(W) E
-+1 thru 17</td>
-      <td>Hideki Matsuyama +1
-+4 thru 15</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td>Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">16</td>
       <td>Justin Thomas(W) -1
@@ -889,6 +873,22 @@ E (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +8
 +7 (F)</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">17</td>
+      <td>Collin Morikawa(W) +1
++2 (F)</td>
+      <td>Hideki Matsuyama +1
++4 thru 15</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -909,9 +909,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">19</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
+      <td class="bigbold">20</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td>Jon Rahm(W) +7
