--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:17:02 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:17:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,22 +220,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">0</td>
-      <td>Sungjae Im -2
-+1 thru 14</td>
-      <td>Justin Thomas -1
-E (F)</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">1</td>
       <td>Shane Lowry -3
@@ -252,12 +236,28 @@ E (F)</td>
 +7 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">1</td>
+      <td>Sungjae Im -2
++1 thru 14</td>
+      <td>Justin Thomas -1
+E (F)</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Cameron Smith(W) -6
 -4 thru 16</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Patrick Cantlay +8
@@ -265,22 +265,6 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">4</td>
-      <td>Justin Thomas(W) -1
-E (F)</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
-      <td>Will Zalatoris +1
-+2 thru 17</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +7
-+5 (F)</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -300,12 +284,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas(W) -1
+E (F)</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
+      <td>Will Zalatoris +1
++2 thru 17</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +7
++5 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Corey Conners(W) -2
 -1 thru 17</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
       <td>Robert MacIntyre +6
 +4 (F)</td>
       <td>Jon Rahm +7
@@ -317,9 +317,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
@@ -329,22 +329,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">19</td>
-      <td>Collin Morikawa E
-+1 thru 17</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td>Jon Rahm(W) +7
-+5 (F)</td>
-      <td>Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -359,6 +343,22 @@ Missed Cut</td>
       <td>Patrick Cantlay +8
 +7 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">20</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
