--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:21:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:22:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,6 +220,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">0</td>
+      <td>Sungjae Im -3
+E thru 15</td>
+      <td>Justin Thomas -1
+E (F)</td>
+      <td>Collin Morikawa +1
++2 (F)</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">1</td>
       <td>Shane Lowry -3
@@ -234,22 +250,6 @@ E (F)</td>
 +7 (F)</td>
       <td class="greyout">Tyrrell Hatton +9
 +7 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">1</td>
-      <td>Sungjae Im -2
-+1 thru 14</td>
-      <td>Justin Thomas -1
-E (F)</td>
-      <td>Collin Morikawa +1
-+2 (F)</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
