--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:29:13 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:29:56 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -269,15 +269,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-11</td>
       <td>Cameron Smith -6
 -4 thru 17</td>
       <td>Shane Lowry -3
 E thru 15</td>
       <td>Corey Conners -2
 -1 thru 17</td>
-      <td>Dustin Johnson(W) -1
-+1 thru 16</td>
+      <td>Dustin Johnson(W) E
++2 thru 17</td>
       <td class="greyout leftborder">Patrick Cantlay +8
 +7 (F)</td>
       <td class="greyout">Louis Oosthuizen
@@ -652,22 +652,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">4</td>
-      <td>Shane Lowry -3
-E thru 15</td>
-      <td>Dustin Johnson(W) -1
-+1 thru 16</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td>Matthew Fitzpatrick +4
-+4 (F)</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">5</td>
       <td>Corey Conners -2
@@ -700,6 +684,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">5</td>
+      <td>Shane Lowry -3
+E thru 15</td>
+      <td>Dustin Johnson(W) E
++2 thru 17</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td>Matthew Fitzpatrick +4
++4 (F)</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">6</td>
       <td>Cameron Smith -6
@@ -717,9 +717,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">10</td>
-      <td>Dustin Johnson -1
-+1 thru 16</td>
+      <td class="bigbold">11</td>
+      <td>Dustin Johnson E
++2 thru 17</td>
       <td>Rory McIlroy(W) +1
 -1 (F)</td>
       <td>Viktor Hovland +3
@@ -729,22 +729,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Patrick Cantlay +8
 +7 (F)</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">11</td>
-      <td>Scottie Scheffler -10
--2 thru 14</td>
-      <td>Dustin Johnson -1
-+1 thru 16</td>
-      <td>Patrick Cantlay +8
-+7 (F)</td>
-      <td>Adam Scott +12
-+8 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -777,6 +761,22 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">12</td>
+      <td>Scottie Scheffler -10
+-2 thru 14</td>
+      <td>Dustin Johnson E
++2 thru 17</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td>Adam Scott +12
++8 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
-      <td>Dustin Johnson -1
-+1 thru 16</td>
+      <td class="bigbold">20</td>
+      <td>Dustin Johnson E
++2 thru 17</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm +7
