--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:29:13 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:29:56 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Corey Conners -2
 -1 thru 17</td>
-      <td>Dustin Johnson -1
-+1 thru 16</td>
       <td>Justin Thomas -1
 E (F)</td>
+      <td>Dustin Johnson E
++2 thru 17</td>
       <td>Russell Henley +7
 +4 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -332,22 +332,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
-      <td>Dustin Johnson -1
-+1 thru 16</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td>Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">20</td>
       <td>Collin Morikawa +1
@@ -359,6 +343,22 @@ Missed Cut</td>
       <td>Patrick Cantlay +8
 +7 (F)</td>
       <td class="greyout leftborder">Jordan Spieth
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">20</td>
+      <td>Dustin Johnson E
++2 thru 17</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
