--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:45:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:46:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -269,15 +269,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -6
 -4 (F)</td>
       <td>Shane Lowry -3
 E thru 16</td>
       <td>Corey Conners -1
 E (F)</td>
-      <td>Dustin Johnson(W) E
-+2 thru 17</td>
+      <td>Dustin Johnson(W) +1
++3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +8
 +7 (F)</td>
       <td class="greyout">Louis Oosthuizen
@@ -668,22 +668,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">5</td>
-      <td>Shane Lowry -3
-E thru 16</td>
-      <td>Dustin Johnson(W) E
-+2 thru 17</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td>Matthew Fitzpatrick +4
-+4 (F)</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">6</td>
       <td>Corey Conners -1
@@ -695,6 +679,22 @@ E (F)</td>
       <td>Jon Rahm(W) +7
 +5 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">6</td>
+      <td>Shane Lowry -3
+E thru 16</td>
+      <td>Dustin Johnson(W) +1
++3 (F)</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td>Matthew Fitzpatrick +4
++4 (F)</td>
+      <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -713,22 +713,6 @@ E (F)</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">11</td>
-      <td>Dustin Johnson E
-+2 thru 17</td>
-      <td>Rory McIlroy(W) +1
--1 (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -764,6 +748,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">12</td>
+      <td>Rory McIlroy(W) +1
+-1 (F)</td>
+      <td>Dustin Johnson +1
++3 (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">13</td>
       <td>Collin Morikawa +1
@@ -776,22 +776,6 @@ Missed Cut</td>
 +5 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +8
 +7 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">13</td>
-      <td>Scottie Scheffler -9
--1 thru 15</td>
-      <td>Dustin Johnson E
-+2 thru 17</td>
-      <td>Patrick Cantlay +8
-+7 (F)</td>
-      <td>Adam Scott +12
-+8 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -809,6 +793,22 @@ E (F)</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">14</td>
+      <td>Scottie Scheffler -9
+-1 thru 15</td>
+      <td>Dustin Johnson +1
++3 (F)</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td>Adam Scott +12
++8 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -892,22 +892,6 @@ Out With Injury</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">20</td>
-      <td>Dustin Johnson E
-+2 thru 17</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td>Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">20</td>
       <td>Collin Morikawa +1
@@ -921,6 +905,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">21</td>
+      <td>Dustin Johnson +1
++3 (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td>Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
