--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:45:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:46:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -285,13 +285,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas -1
 E (F)</td>
       <td>Corey Conners -1
 E (F)</td>
-      <td>Dustin Johnson E
-+2 thru 17</td>
+      <td>Dustin Johnson +1
++3 (F)</td>
       <td>Russell Henley +7
 +4 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">20</td>
-      <td>Dustin Johnson E
-+2 thru 17</td>
+      <td class="bigbold">21</td>
+      <td>Dustin Johnson +1
++3 (F)</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm +7
