--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:46:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:47:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -221,9 +221,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">0</td>
-      <td>Sungjae Im -3
-E thru 16</td>
+      <td class="bigbold">-1</td>
+      <td>Sungjae Im -4
+-1 thru 17</td>
       <td>Justin Thomas -1
 E (F)</td>
       <td>Collin Morikawa +1
