--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:22:06 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:22:49 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -797,15 +797,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">15</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Patrick Cantlay +8
 Not started</td>
-      <td>Adam Scott +12
-Not started</td>
+      <td>Adam Scott +13
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
