--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:43:36 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:44:19 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -248,8 +248,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
 E thru 1</td>
-      <td class="greyout">Tyrrell Hatton +10
-+1 thru 1</td>
+      <td class="greyout">Tyrrell Hatton +9
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
