--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:43:36 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:44:19 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,8 +182,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
-      <td class="greyout leftborder">Tyrrell Hatton +10
-+1 thru 1</td>
+      <td class="greyout leftborder">Tyrrell Hatton +9
+E thru 2</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
