--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:51:29 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:52:12 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -663,7 +663,7 @@ Not started</td>
       <td>Jon Rahm(W) +7
 Not started</td>
       <td class="greyout leftborder">Bubba Watson +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
