--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:21:35 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:22:18 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -492,22 +492,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Patrick Cantlay +7
--1 thru 4</td>
-      <td>Billy Horschel +9
--1 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler -9
@@ -521,6 +505,22 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +8
 +1 thru 2</td>
       <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Patrick Cantlay +7
+-1 thru 4</td>
+      <td>Billy Horschel +10
+E thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
