--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:25:53 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:26:36 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -662,8 +662,8 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) +8
 +1 thru 2</td>
-      <td class="greyout leftborder">Bubba Watson +8
-E thru 2</td>
+      <td class="greyout leftborder">Bubba Watson +9
++1 thru 3</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
