--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:28:45 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:29:28 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -278,8 +278,8 @@ Not started</td>
 Not started</td>
       <td>Tony Finau +4
 Not started</td>
-      <td class="greyout leftborder">Daniel Berger +7
-E thru 1</td>
+      <td class="greyout leftborder">Daniel Berger +6
+-1 thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">13</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
-      <td>Daniel Berger +7
-E thru 1</td>
+      <td>Daniel Berger +6
+-1 thru 2</td>
       <td>Robert MacIntyre +7
 +1 thru 1</td>
       <td class="greyout leftborder">Jon Rahm +8
