--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:40:13 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:40:56 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -301,17 +301,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">12</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Daniel Berger +6
 -1 thru 2</td>
-      <td>Jon Rahm +7
+      <td>Robert MacIntyre +6
+E thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +7
 E thru 3</td>
-      <td class="greyout leftborder">Robert MacIntyre +7
-+1 thru 1</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
