--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:10:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:11:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -167,7 +167,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -248,8 +248,8 @@ Not started</td>
 E thru 5</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 7</td>
-      <td class="greyout">Tyrrell Hatton +10
-+1 thru 8</td>
+      <td class="greyout">Tyrrell Hatton +11
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
