--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:10:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:11:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,8 +182,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
-      <td class="greyout leftborder">Tyrrell Hatton +10
-+1 thru 8</td>
+      <td class="greyout leftborder">Tyrrell Hatton +11
++2 thru 9</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -295,7 +295,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -422,8 +422,8 @@ Not started</td>
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
-      <td class="greyout leftborder">Tiger Woods +8
-+1 thru 5</td>
+      <td class="greyout leftborder">Tiger Woods +9
++2 thru 6</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -435,7 +435,7 @@ Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Matthew Fitzpatrick +4
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +7
 -1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -600,8 +600,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
-      <td class="greyout">Tiger Woods(W) +8
-+1 thru 5</td>
+      <td class="greyout">Tiger Woods(W) +9
++2 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -614,8 +614,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Tiger Woods +8
-+1 thru 5</td>
+      <td class="greyout leftborder">Tiger Woods +9
++2 thru 6</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -693,7 +693,7 @@ Not started</td>
       <td>Tony Finau +4
 Not started</td>
       <td>Matthew Fitzpatrick +4
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -701,15 +701,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Jon Rahm(W) +7
 E thru 5</td>
-      <td>Tiger Woods +8
-+1 thru 5</td>
+      <td>Tiger Woods +9
++2 thru 6</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
